# pds-ml

./: LICENSE  README.md  README.rst  pyproject.toml  setup.py
pds/recommender/: Recommender.py
pds/self_supervised_learner/: Evaluator.py  SSL.py  __init__.py
pds/self_supervised_learner/dali_utils/: dali_transforms.py
pds/self_supervised_learner/models/: CLASSIFIER.py  SIMCLR.py  SIMSIAM.py
pds/utilities/: image_utils.py
src/self_supervised_learner/: SSL.py  __init__.py  train.py
src/self_supervised_learner/models/: SIMSIAM.py
src/utilities/: io_utilities.py
system/env/: environment_A5000.yml  pds_env_startup.sh
